syntax = "proto3";
package websocket;

option go_package = ".;pb";

message Client {
    string client_id = 1;
}
